*could: add an heuristic on whether avahi registration will be accepted based on the size of the properties
*could: dnssd client auto connect/reconnect
*could: dnssd client has a list of expected servers

1.1.0
r
API MINOR CHANGE!!!! added a ConnectionRefused exception on connectTo
API ADDITION!!!! added ServiceRepository
revisited synchronization procedure in ServiceProxyImpl cache (better handling of updateDescription problem)
minor (unperceptible/mostly code cleaning) performance improvement in ServiceImpl.findService
unnecessary marshalling avoided
        fix:  default "class" variable value is now "Service" as intended
        fix:  getting a remote variable now properly ask the remote service (wrong caching policy)
        fix:  service xml description now uses proper castor version
        fix:  added a try catch around listener callbacks (was trusting listeners) (connector and variable listeners)
        fix:  listener added before connectTo are now properly listening
        fix:  connectors peer id where wrongly generated in some cases
        impr: sensible performance improvement on high bandwidth message receptions
        impr: have different options to access dnssd (mdnsResponder, avahi, jmdns, custom proxy for lightweight devices)
        impr: added a default factory that smartly uses available dnssd provider (avahi then mdns then jmdns)
        impr: allows dnssd browser sharing to improve performance of applications using multiple browsers
        impr: cleaner affectation of peer id for searchs and connections before .start()
        impr: in order to handle mDNSResponder vs avahi daemons conflict happening on some configurations, the possible trailing "-2" on the hostname is removed when needed
        impr: Utility class will now be accessible from OSGi and now contains a shortcut Utility.message(String) to Utility.stringToByteArray()

1.0.3
r1700